crates/board-tui/tests/snapshots/snapshots__new_card_modal_fallback.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running     [ Global ▾ ]      [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ New card  ·  f: fullscreen  ·  Tab: field · Enter: save · Esc: cancel ───────┐"
"│┌ Task ─────────────────────────────────────────────────────────────────────┐▲│"
"││▌ title                                                                    │█│"
"││▏                                                                          │█│"
"││  description (base prompt) [ $EDITOR ]                                    │█│"
"││                                                                           │█│"
"││                                                                           │█│"
"││                                                                           │││"
"││                                                                           │││"
"│└───────────────────────────────────────────────────────────────────────────┘││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ││"
"│                                                                             ▼│"
"│               [ Save ]                              [ Cancel ]               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" capabilities unavailable (harness.capabilities: stubbed failure); free-text    "
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
