crates/board-tui/tests/snapshots/snapshots__new_card_modal_pi_custom_low.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
"┌ New card  ·  f: fullscreen  ·  Tab: field · Enter: save · Esc: cancel ───────┐"
"│┌───────────────────────────────────────────────────────────────────────────┐▲│"
"│▌ title                                                                      █│"
"│▏                                                                            █│"
"│  description (base prompt) [$EDITOR]                                        █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│┌───────────────────────────────────────────────────────────────────────────┐█│"
"│  harness                                                                    █│"
"│[‹]  pi  [›]                                                                 ││"
"│  model                                                                      ││"
"│[‹]  (custom)  [›]                                                           ││"
"│  custom model                                                               ││"
"│openai-codex/example                                                         ││"
"│  effort                                                                     ││"
"│[‹]  low  [›]                                                                ││"
"│┌───────────────────────────────────────────────────────────────────────────┐││"
"│  session                                                                    ││"
"│[‹]  (default)  [›]                                                          ▼│"
"│               [ Save ]                              [ Cancel ]               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Tab fields · Enter save · Esc cancel                                            "
