crates/board-tui/tests/snapshots/snapshots__new_card_modal_picker_focused.snap
---
source: crates/board-tui/tests/snapshots.rs
assertion_line: 324
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ New card  ·  f: fullscreen  ·  Tab: field · Enter: save · Esc: cancel ───────┐"
"│┌ Task ─────────────────────────────────────────────────────────────────────┐▲│"
"││  title                                                                    │█│"
"││                                                                           │█│"
"││  description (base prompt) [ $EDITOR ]                                    │█│"
"││                                                                           │█│"
"││                                                                           │█│"
"││                                                                           │█│"
"││                                                                           │█│"
"│└───────────────────────────────────────────────────────────────────────────┘█│"
"│┌ Agent ────────────────────────────────────────────────────────────────────┐││"
"││▌ harness                                                                  │││"
"││[ ‹ ]  pi  [ › ]                                                           │││"
"││  model                                                                    │││"
"││[ ‹ ]  default model  [ › ]                                                │││"
"││  effort                                                                   │││"
"││[ ‹ ]  default effort  [ › ]                                               │││"
"│└───────────────────────────────────────────────────────────────────────────┘▼│"
"│               [ Save ]                              [ Cancel ]               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
