crates/board-tui/tests/snapshots/snapshots__project_picker_long_scoped_row.snap
---
source: crates/board-tui/tests/snapshots.rs
assertion_line: 866
expression: output
---
"[ Project: Gl… ] [ Act ] [ All ] [ Arc ]"
"            [ Board: main ]             "
"[ ‹ ] [ Todo (M) · 1/6 · 1 cards ] [ › ]"
"────────────────────────────────────────"
"┌ Switch project ────────────────[ X ]─┐"
"│›Global                               │"
"│ project — /work/alpha/project        │"
"│ project — /Volumes/archive/project   │"
"│ scope —                              │"
"│/private/tmp/hb-visual.HWoEPU/scope   │"
"│ ＋ New project                       │" Hidden by multi-width symbols: [(3, " ")]
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│ v:cycle a:archive r:restore [ACTIVE] │"
"└──────────────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] "
"[ + Column ]  [ Edit col ]  [ Del col ] "
"[ Move col ]  [ Template ]  [ ? Help ]  "
