crates/board-tui/tests/snapshots/snapshots__toast_error.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ Card #5: Refactor auth module                                     [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────────────────────────┐│"
"││✗ failed                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────────────────────────┐│"
"││Harness · Model: claude · opus · effort medium · perm plan                  ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-                         ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│      [ Edit card ]           [ Duplicate card ]         [ Archive card ]     │"
"│┌Comments ↑↓─────────────────────────────────────────────────────────────────┐│"
"││ [agent:2] Reviewer: tests missing for token refresh                        ││"
"││ [ Add comment ]    [ Edit comment ]   [ Delete comment ]     [ History ]   ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Runs ↑──────────────────────────────────────────────────────────────────────┐│"
"││ [ Open worker ]       [ Reopen ]          [ Retry ]          [ Cancel ]    ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" FakeBoardClient: unsupported method run.retry                                  "
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
